package carcassonne.edge;

public enum Zone {
    FIELD, CITY;
}
