package l3s6.projet.star.game.edge;

public class WrongTopologyException extends Exception{

    public WrongTopologyException(String message) {
        super(message);
    }
    
}
