package l3s6.projet.star.game.meeple;

public class Meeple {
    public Meeple(){

    }
}
