package l3s6.projet.star.game.tile;

public class WrongTileSyntaxException extends Exception{

    public WrongTileSyntaxException(String message) {
        super(message);
    }

}
