package l3s6.projet.star.game.edge;

public class NoMeepleException  extends Exception{

    public NoMeepleException(String message) {
        super(message);
    }
    
}
